hphp/hack/test/typecheck/contravariance_bad2.php.exp
File "contravariance_bad2.php", line 19, characters 34-35:
Invalid argument (Typing[4110])
File "contravariance_bad2.php", line 12, characters 40-40:
This is an object of type I
File "contravariance_bad2.php", line 12, characters 24-25:
It is incompatible with a nullable type
